# KWhatsApp

./: .gitattributes  AndroidManifest.xml  README.md  Whatsapp Mods CheatSheet.txt  build.gradle  project.properties
Tools/: Whatsapp Mods CheatSheet.txt  arrays.xml
app/: build.gradle  fabric.properties  proguard-rules.pro
app/src/androidTest/java/com/kmods/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: CL.html  credits.html  custom_privacy.xml  eula.xml  group_chat_info_row.xml  privacy_card.xml  view_profile_photo.xml
app/src/main/assets/layout/: contact_info_header.xml  custom_privacy.xml  group_chat_info_row.xml  home.xml  home_drawer.xml  view_profile_photo.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/kmods/: ActionP.java  BackupP.java  BubbleS.java  CopyTask.java  Main.java  Mod.java  ModsL.java  Privacy.java  PrivacyL.java  RestoreB.java  RestoreP.java  SVF.java  Settings.java  TickS.java  Update.java  Update2.java  Utils.java
app/src/main/java/com/kmods/Activity/: Bubble.java  CPrivacy.java  Privacy.java  Settings.java
app/src/main/java/com/lody/whale/: WhaleRuntime.java
app/src/main/java/com/whatsapp/: App.java  BubbleRelativeLayout.java  ContactInfo.java  Conversation.java  Exo.java  GroupChatInfo.java  HomeActivity.java  Main.java  Settings.java  VideoPreviewActivity.java  WAAppCompatActivity.java  a7l.java  aao.java  aaw.java  ab7.java  abg.java  ah1.java  ahw.java  anu.java  aum.java  ay6.java  cy.java  e2.java  mp.java  ms.java  mt.java  ng.java  nj.java  qj.java  sd.java  sz.java  ti.java  tj.java  tz.java  ui.java  uk.java  ut.java
app/src/main/java/com/whatsapp/messaging/: cn.java  n.java  z.java
app/src/main/java/com/whatsapp/protocol/: a.java  a4.java  al.java  b9.java  by.java  g.java  l.java
app/src/main/java/com/whatsapp/registration/: ax.java  az.java  b.java  bq.java  bs.java  c.java
app/src/main/java/com/whatsapp/util/: bn.java  bt.java  d7.java
app/src/main/java/de/robv/android/xposed/: ClassUtils.java  MemberUtils.java  XC_MethodHook.java  XC_MethodReplacement.java  XposedBridge.java  XposedHelpers.java
app/src/main/java/de/robv/android/xposed/callbacks/: XCallback.java
app/src/main/java/in/kmods/kwhatsapp/: ColorsManager.java  KMODs.java  Prefs.java  Resources.java  SVF.java
app/src/main/java/in/kmods/kwhatsapp/WAClass/: HomeActivity.java
app/src/main/java/kmods/: ActionP.java  ContactToast.java  CopyTask.java  Privacy.java  PrivacyL.java  Rango.java  RestoreB.java  SVF.java  Settings.java  ShortcutsManager.java  Styles.java  Update.java  Update2.java  Utils.java  WA.java
app/src/main/java/kmods/colorpicker/: AlphaView.java  ColorObserver.java  ColorPickerView.java  HexEdit.java  HueSatView.java  ObservableColor.java  Resources.java  SliderViewBase.java  SquareView.java  SwatchView.java  ValueView.java
app/src/main/java/kmods/preference/: ActionP.java  ColorPickerPreference.java  RangoPrefs.java
app/src/main/java/kmods/view/: NavigationDrawer.java  NavigationDrawerGoogle.java
app/src/main/res/drawable/: gc.xml  ic_shortcut_background.xml  ic_shortcut_contact.xml
app/src/main/res/drawable-v1/: conversations_list_divider.xml  selector_orange_gradient.xml  splash.xml  wamod_fab.xml  wamod_style_stockwcounterphoto_conversations_row_bg.xml
app/src/main/res/drawable-v21/: wamod_fab.xml
app/src/main/res/layout/: badlati_preference.xml  conversation_actionbar_progress.xml  custom_mods.xml  custom_privacy.xml
app/src/main/res/layout-land/: picker.xml
app/src/main/res/layout-v1/: calls.xml  color_preference_thumbnail.xml  contact_info_header.xml  contact_picker_list.xml  custom_privacy.xml  groupchat_info_header.xml  home_drawer_header_centered.xml  picker.xml  wamod_colorpicker_dialog.xml
app/src/main/res/raw/: incoming.m4a  send_message.m4a
app/src/main/res/values/: array.xml  attrs.xml  colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/values-v1/: array.xml  arrays.xml  attrs.xml  colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/xml/: bubbles.xml  privacy.xml  settings.xml  wm.xml
app/src/test/java/com/kmods/: ExampleUnitTest.java
assets/: privacy_card.xml
gradle/wrapper/: gradle-wrapper.properties
res/layout/: custom_mods.xml  custom_privacy.xml  eula.xml
res/values/: array.xml  ids.xml  strings.xml
res/xml/: settings.xml  wm.xml
src/com/kmods/: ActionP.java  ModsL.java  Privacy.java  PrivacyL.java  RestoreB.java  SVF.java  Settings.java  Update.java  Update2.java  Utils.java
src/com/mega/: BackupP.java  CopyTask.java  Main.java  Mega.java  Privacy.java  RestoreB.java  RestoreP.java  SVF.java  Settings.java  Style.java  Update.java  Update2.java  UpdateP.java
src/com/whatsapp/: Conversation.java  HomeActivity.java  Settings.java  VideoPreviewActivity.java  akv.java  ayh.java  e9.java  io.java  o9.java  r2.java
src/com/whatsapp/messaging/: a4.java  b6.java
src/com/whatsapp/protocol/: ba.java  s.java
src/com/whatsapp/registration/: a.java  b.java
src/com/whatsapp/util/: b_.java  bi.java  i.java  o.java  v.java
tools/: Whatsapp Mods CheatSheet.txt
tools/WappPKey/: Run.bat
